# Brad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LEARNING_PATH.md
docs/prompts/: summary_engineering.md  summary_general.md  summary_sales.md
src/brad/: __init__.py  cli.py  config.py  doctor.py  services.py
src/brad/asr/: __init__.py  base.py  faster_whisper_backend.py  onnx_backend_stub.py
src/brad/audio/: __init__.py  chunking.py  ffmpeg.py  vad.py
src/brad/export/: __init__.py  json.py  md.py  srt.py
src/brad/nlp/: __init__.py  prompts.py  summarizer.py
src/brad/storage/: __init__.py  db.py  fts.py  models.py
src/brad/ui/: __init__.py  desktop_app.py  gradio_app.py  kivy_app.py
tests/: test_chunking.py  test_cli_ui_mode.py  test_config.py  test_faster_whisper_backend.py  test_fts_search.py  test_onnx_backend.py  test_srt_export.py
